storage class filtering support
